--- a/sentry/config.example.yml
+++ b/sentry/config.example.yml
@@ -8,11 +8,11 @@
 ###############
 
 # mail.backend: 'smtp'  # Use dummy if you want to disable email entirely
-mail.host: 'smtp'
-# mail.port: 25
+mail.host: 'smtp.qq.com'
+mail.port: 25
 # mail.username: ''
 # mail.password: ''
-# mail.use-tls: false
+mail.use-tls: true
 # The email address to send on behalf of
 mail.from: 'bastet@sensorsdata.cn'
 
