--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,7 @@ data/
 
 # custom Sentry config
 sentry/sentry.conf.py
-sentry/config.yml
+# sentry/config.yml
 sentry/*.bak
 sentry/requirements.txt
 relay/credentials.json
