--- a/sentry/config.example.yml
+++ b/sentry/config.example.yml
@@ -10,7 +10,7 @@
 # mail.backend: 'smtp'  # Use dummy if you want to disable email entirely
 mail.host: 'smtp'
 # mail.port: 25
-mail.username: 'bastet@sensorsdata.cn'
+# mail.username: 'bastet@sensorsdata.cn'
 # mail.password: ''
 # mail.use-tls: false
 # The email address to send on behalf of
