--- a/sentry/config.example.yml
+++ b/sentry/config.example.yml
@@ -8,13 +8,17 @@
 ###############
 
 # mail.backend: 'smtp'  # Use dummy if you want to disable email entirely
-mail.host: 'smtp'
-# mail.port: 25
-# mail.username: 'bastet@sensorsdata.cn'
-# mail.password: ''
-# mail.use-tls: false
-# The email address to send on behalf of
-mail.from: 'root@localhost'
+# 腾讯企业邮箱SMTP服务
+mail.host: 'smtp.exmail.qq.com'
+mail.port: 587
+# 邮箱账号
+mail.username: 'peng@xxxx' 
+# 邮箱密码
+mail.password: 'xxxx'
+mail.use-tls: true
+#  The email address to send on behalf of
+# 邮箱账号
+mail.from: 'peng@xxx.cn'
 
 # If you'd like to configure email replies, enable this.
 # mail.enable-replies: true
